--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">
-                 <i class="fa-solid fa-phone"></i>
-                 <span class="fs-6 text-danger"> 0 835 987 65 43</span>
+                  <i class="fa-solid fa-phone"></i>
+                  <span class="fs-6 text-danger"> 0 835 987 65 43</span>
                 </a>
               </li>
             </ul>
@@ -75,67 +75,200 @@
       </nav>
     </header>
     <main>
-
-<div id="carouselExampleCaptions" class="carousel slide my-2" data-bs-ride="carousel">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
-  </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active"  data-bs-interval="10000">
-      <img src="assets/img/slider1-koltuk.jpg" class="d-block w-100 img-fluid" >
-      <div class="carousel-caption d-none d-md-block">
-        <h5>KOLTUK TEMİZLEME</h5>
-        <p>Some representative placeholder content for the first slide.</p>
+      <div
+        id="carouselExampleCaptions"
+        class="carousel slide my-2"
+        data-bs-ride="carousel"
+      >
+        <div class="carousel-indicators">
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="0"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 1"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="1"
+            aria-label="Slide 2"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="2"
+            aria-label="Slide 3"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="3"
+            aria-label="Slide 4"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="4"
+            aria-label="Slide 5"
+          ></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active" data-bs-interval="10000">
+            <img
+              src="assets/img/slider1-koltuk.jpg"
+              class="d-block w-100 img-fluid"
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>KOLTUK TEMİZLEME</h5>
+              <p>
+                Some representative placeholder content for the first slide.
+              </p>
+            </div>
+          </div>
+          <div class="carousel-item" data-bs-interval="2000">
+            <img
+              src="assets/img/slider2-hali.jpg"
+              class="d-block w-100 img-fluid"
+              alt="..."
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>HALI TEMİZLEME</h5>
+              <p>
+                Some representative placeholder content for the second slide.
+              </p>
+            </div>
+          </div>
+          <div class="carousel-item" data-bs-interval="2000">
+            <img
+              src="assets/img/slider3-perde.jpg"
+              class="d-block w-100 img-fluid"
+              alt="..."
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>PERDE TEMİZLEME</h5>
+              <p>
+                Some representative placeholder content for the third slide.
+              </p>
+            </div>
+          </div>
+          <div class="carousel-item" data-bs-interval="2000">
+            <img
+              src="assets/img/slider4-araba.jpeg"
+              class="d-block w-100 img-fluid"
+              alt="..."
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>ARABA TEMİZLEME</h5>
+              <p>
+                Some representative placeholder content for the dorduncu slide.
+              </p>
+            </div>
+          </div>
+          <div class="carousel-item" data-bs-interval="2000">
+            <img
+              src="assets/img/slider5-yatak.jpg"
+              class="d-block w-100"
+              alt="..."
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>YATAK TEMİZLEME</h5>
+              <p>
+                Some representative placeholder content for the besinci slide.
+              </p>
+            </div>
+          </div>
+        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
-    </div>
-    <div class="carousel-item"  data-bs-interval="2000">
-      <img src="assets/img/slider2-hali.jpg" class="d-block w-100 img-fluid" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>HALI TEMİZLEME</h5>
-        <p>Some representative placeholder content for the second slide.</p>
+      <div class="row-cols-1 fs-5 my-3 mx-5 fw-semibold">
+        <p>
+          Temizlik hizmetlerimiz hakkında daha fazla bilgi almak veya randevu
+          oluşturmak için sitemizdeki iletişim bilgilerimizden bize
+          ulaşabilirsiniz.
+        </p>
       </div>
-    </div>
-    <div class="carousel-item"  data-bs-interval="2000">
-      <img src="assets/img/slider3-perde.jpg" class="d-block w-100 img-fluid" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>PERDE TEMİZLEME</h5>
-        <p>Some representative placeholder content for the third slide.</p>
+
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-12 col-md-6 col-lg-3 gap-1 my-2">
+            <div class="card h-100 align-items-center">
+              <img src="assets/img/card1.png" class="card-img-top img-fluid" />
+              <div class="card-body">
+                <h5 class="card-title">Çevre Dostu</h5>
+                <p class="card-text">
+                  Halı, koltuk ve yastık temizliğinde çevreye duyarlıyız. Özel
+                  makineler ve doğa dostu temizlik ürünleri kullanarak etkili ve
+                  çevre dostu bir temizlik sağlıyoruz. Doğal kaynakları koruma
+                  konusunda da katkı sağlıyoruz.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-3 gap-1 my-2">
+            <div class="card h-100 align-items-center">
+              <img src="assets/img/card2.png" class="card-img-top img-fluid" />
+              <div class="card-body">
+                <h5 class="card-title">Allerjen İçermez</h5>
+                <p class="card-text">
+                  Allerjen İçermez Halı, koltuk ve yastık temizleme hizmetimiz
+                  allerjen içermeyen bir ortam sunar. Özel makinelerimiz ve
+                  temizlik ürünlerimiz sayesinde toz, polen ve alerjenleri
+                  etkili bir şekilde temizleriz. Rahat bir nefes almak için bize
+                  başvurun!
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-3 gap-1 my-2">
+            <div class="card h-100 align-items-center">
+              <img src="assets/img/card3.png" class="card-img-top img-fluid" />
+              <div class="card-body">
+                <h5 class="card-title">Daha Az Kimyasal</h5>
+                <p class="card-text">
+                  Halı, koltuk ve yastık temizleme hizmetimizde çevre dostu ve
+                  doğal temizlik ürünleri tercih ediyoruz. Daha az kimyasal
+                  kullanarak sağlığınıza ve çevreye duyarlı bir temizlik
+                  sunuyoruz. Bize başvurun, temizlikte daha az kimyasal ile
+                  hizmet alın!
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-3 gap-1 my-2">
+            <div class="card h-100 align-items-center">
+              <img src="assets/img/card4.png" class="card-img-top img-fluid" />
+              <div class="card-body">
+                <h5 class="card-title">Etkili Temizlik</h5>
+                <p class="card-text">
+                  Halı, koltuk ve yastık temizliğinde etkili sonuçlar sunuyoruz.
+                  Uzman ekip ve özel makinelerimizle toz, kir ve lekeleri etkili
+                  bir şekilde temizliyoruz. Bize başvurun, etkili temizliğin
+                  keyfini yaşayın!
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
-    <div class="carousel-item"  data-bs-interval="2000">
-      <img src="assets/img/slider4-araba.jpeg" class="d-block w-100 img-fluid" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5 >ARABA TEMİZLEME</h5>
-        <p>Some representative placeholder content for the dorduncu slide.</p>
-      </div>
-    </div>
-    <div class="carousel-item"  data-bs-interval="2000">
-      <img src="assets/img/slider5-yatak.jpg" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5 >YATAK TEMİZLEME</h5>
-        <p>Some representative placeholder content for the besinci slide.</p>
-      </div>
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
-
-
-
-
-
-
     </main>
     <footer></footer>
     <script
