--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+
       <div class="row-cols-1 fs-5 my-3 mx-5 fw-semibold">
         <p>
           Temizlik hizmetlerimiz hakkında daha fazla bilgi almak veya randevu
@@ -207,7 +208,7 @@
         </p>
       </div>
 
-      <div class="container">
+      <div class="container my-2">
         <div class="row text-center">
           <div class="col-12 col-md-6 col-lg-3 gap-1 my-2">
             <div class="card h-100 align-items-center">
@@ -269,6 +270,71 @@
           </div>
         </div>
       </div>
+
+      <section class="container my-3 fs-5 fw-normal">
+        <div class="row align-items-center">
+          <div class="koltuk my-3" id="koltuk">
+            <h2>Koltuk Temizleme</h2>
+          </div>
+          <div class="col-4 my-2">
+            <p>
+              Kullandığımız özel makineler sayesinde, koltuklarınızın ve
+              yastıklarınızın toz, leke ve kirlerinden arınmasını sağlıyoruz.
+              Hem hijyenik hem de estetik açıdan temiz koltuk ve
+              yastıklarınızla, yaşam alanınızın havası tazeleniyor.
+            </p>
+          </div>
+          <div class="col-5 my-2">
+            <img src="assets/img/koltuk1.jpg" class="img-fluid" />
+          </div>
+        </div>
+        <div class="row align-items-center justify-content-end">
+          <div class="col-4 my-2">
+            <p>
+              Siz de evinizde veya iş yerinizde koltuk ve yastıklarınızın
+              temizliğini profesyonel ellere teslim etmek istemez misiniz? Biz,
+              koltuk ve yastık temizleme konusunda uzmanlaşmış bir ekip olarak,
+              ev veya iş yerinize gelerek koltuklarınızı ve yastıklarınızı
+              derinlemesine temizliyoruz.
+            </p>
+          </div>
+          <div class="col-5 my-2">
+            <img src="assets/img/koltuk2.jpg" class="img-fluid" />
+          </div>
+        </div>
+        <div class="row align-items-center">
+          <div class="hali my-3" id="hali">
+            <h2>Halı Temizleme</h2>
+          </div>
+          <div class="col-4 my-2">
+            <p>
+              Halılarınızı yıkamak için vakit ayıramıyor ya da yıkama işlemini
+              evde yapacak imkanınız yok mu? Biz, evlerde halı yıkama hizmeti
+              sunarak, halılarınızı profesyonelce temizliyoruz. Uzman ekibimiz
+              ve özel makinelerimiz sayesinde, halılarınızı derinlemesine
+              temizleyerek, toz, kir ve lekelerden arındırıyoruz.
+            </p>
+          </div>
+          <div class="col-5 my-2">
+            <img src="assets/img/hali1.jpg" class="img-fluid" />
+          </div>
+        </div>
+        <div class="row align-items-center justify-content-end">
+          <div class="col-4 my-2">
+            <p>
+              Kullandığımız özel temizlik ürünleri de hem hijyenik hem de doğa
+              dostu. Halı yıkama işlemlerimizi evinizde gerçekleştiriyoruz,
+              böylece halılarınızı hiçbir yere götürmek zorunda kalmadan
+              temizleniyor. Hizmetlerimiz hakkında daha fazla bilgi almak için
+              sitemizdeki iletişim bilgilerimizden bizimle iletişime
+              geçebilirsiniz.
+            </p>
+          </div>
+          <div class="col-5 my-2">
+            <img src="assets/img/hali2.jpg" class="img-fluid" />
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
     <script
