--- a/index.html
+++ b/index.html
@@ -334,9 +334,105 @@
             <img src="assets/img/hali2.jpg" class="img-fluid" />
           </div>
         </div>
+        <div class="row align-items-center">
+          <div class="perde my-3" id="perde">
+            <h2>Perde Temizleme</h2>
+          </div>
+          <div class="col-4 my-2">
+            <p>
+              Perdelerinizde biriken toz ve kirler, zamanla hem estetik açıdan
+              hoş olmayan bir görüntü yaratır hem de sağlığınızı olumsuz
+              etkileyebilir. Biz, perde temizleme hizmetiyle perdelerinizi
+              yeniden canlandırıyoruz. Temizlenmiş perdelerinizle daha ferah bir
+              ortamın keyfini çıkarabilirsiniz.
+            </p>
+          </div>
+          <div class="col-5 my-2">
+            <img src="assets/img/perde1.jpeg" class="img-fluid" />
+          </div>
+        </div>
+
+        <div class="row align-items-center justify-content-end">
+          <div class="col-4 my-2">
+            <h2 class="yatak mb-4" id="yatak">Yatak Temizleme</h2>
+            <p>
+              Yataklarımız, günlük kullanım ve terleme nedeniyle zamanla toz,
+              kir ve mikroorganizmaların biriktiği yerlerdir. Sağlıklı bir uyku
+              için temiz yataklar önemlidir. Yatak temizleme hizmetimizle
+              yataklarınızı hijyenik bir şekilde temizliyoruz. Temizlenmiş
+              yataklarınızda rahat ve sağlıklı bir uyku deneyimi
+              yaşayabilirsiniz.
+            </p>
+          </div>
+          <div class="col-5 my-2">
+            <img src="assets/img/yatak1.jpg" class="img-fluid" />
+          </div>
+        </div>
+
+        <div class="row align-items-center">
+          <div class="araba my-3" id="araba">
+            <h2>Araba Koltuğu Temizleme</h2>
+          </div>
+          <div class="col-4 my-2">
+            <p>
+              Profesyonel araba koltuğu temizleme hizmetimiz, toz, leke ve kötü
+              kokuların biriktiği araba koltuklarınızı tazeler. Özel
+              ekipmanlarımız ve leke çıkarma tekniklerimizle koltuklarınızı
+              derinlemesine temizleriz. Hem iç mekanın görünümünü iyileştirir
+              hem de daha temiz ve ferah bir sürüş deneyimi sunarız.
+            </p>
+          </div>
+          <div class="col-5 my-2">
+            <img src="assets/img/araba1.jpg" class="img-fluid" />
+          </div>
+        </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="container-fluid p-1">
+        <h3 class="fs-3 fw-bolder mx-4 my-2">
+          Fiyat için bize ulaşabilirsiniz.
+        </h3>
+        <div class="row">
+          <div class="col-8" id="cizgi">
+            <div class="row">
+              <div class="col-4">
+                <img src="assets/img/foot-logo.png" class="img-fluid" />
+              </div>
+              <div class="col-4">
+                <ul class="list-unstyled ps-4">
+                  <li><a href="#hali">Halı Temizleme</a></li>
+                  <li><a href="#koltuk">Koltuk Temizleme</a></li>
+                  <li><a href="#perde">Perde Temizleme</a></li>
+                  <li><a href="#yatak">Yatak Temizleme</a></li>
+                  <li><a href="#araba">Araba Koltuğu Temizleme</a></li>
+                </ul>
+              </div>
+              <div class="col-4">
+                <ul class="list-unstyled ps-4">
+                  <li><a href="#">Hakkımızda</a></li>
+                  <li><a href="#">İnternette Biz</a></li>
+                  <li><a href="#">Çalışmalarımız</a></li>
+                  <li><a href="#">Referanslar</a></li>
+                  <li><a href="#">Bizimle Çalışmak İstermisiniz</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-4" id="footsosyal">
+            <ul class="list-unstyled d-flex gap-3 fs-4 justify-content-center ">
+              <li><a href="#"><i class="fa-brands fa-whatsapp"></i></a></li>
+              <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+              <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+              <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+              <li><a href="#"><i class="fa-solid fa-phone me-3"></i>
+                  <span class="fs-5">0 835 987 65 43</span></a></li>
+        
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
